# constexpr-calculator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: github_actions.yml
src/: calculator.hpp  error.hpp  main.cpp  math_utils.hpp  nodes.hpp  parser.hpp  tokenizer.hpp
src/include/constexpr-calculator/: calculator.hpp
test/: calc_test.cpp
